<resources>
    <string name="app_name">Parking App</string>
    <string name="title_home">Home</string>
    <string name="title_park_selection">Parking</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_park_title">Select Parking Location</string>
    <string name="city">City</string>
    <string name="park">Park</string>
    <string name="continue_string">Continue</string>
    <string name="parking_simulator">Parking Simulator</string>
    <string name="place_holder">n/a</string>
    <string name="taken_slots">Taken Slots</string>
    <string name="available_slots">Available Slots</string>
    <string name="park_entry">Park Entry</string>
    <string name="click_to_sign_up">Click to sign up</string>
    <string name="welcome_to_our_app">Welcome to our App!</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_singup">Click to SingUp</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_main">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_signup">Click to signup</string>
    <string name="title_profile">title_profile</string>
    <string name="profile">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="Profile">Profile</string>
    <string name="profile_menu">Profile</string>
    <string name="login">Login</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login1">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="back">Back</string>
    <string name="back_parking">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="vehicle_number">Vehicle Number (8 digits)</string>
    <string name="payment_details">Payment Details</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment">payment</string>
    <string name="user_email_label">User Email:</string>
    <string name="vehicle_number_label">Vehicle Number:</string>
    <string name="vehicle_location_label">Vehicle Location in Parking:</string>
    <string name="parking_time_label">Time of Parking:</string>
    <string name="payment_cost_label">Payment Cost:</string>
    <string name="instructions">instructions</string>
    <string name="logout">logout</string>
    <string name="welcome_to_our_app_user">Welcome to our app, User!</string>
    <string name="user_email">User Email:</string>
    <string name="example_example_com">example@example.com</string>
    <string name="vehicle_number1">Vehicle Number:</string>
    <string name="_12345678">12345678</string>
    <string name="vehicle_location_in_parking">Vehicle Location in Parking:</string>
    <string name="slot_a1">Slot A1</string>
    <string name="time_of_parking">Time of Parking:</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="payment_cost">Payment Cost:</string>
    <string name="_10_00">$10.00</string>
    <string name="unavailable_slots">UnAvailable Slots</string>
    <string name="exit">EXIT</string>
    <string name="park_spot">Park spot</string>
    <string name="arrow">arrow</string>
    <string name="car">car</string>
    <string name="block">block</string>
    <string name="ticket">Ticket</string>
    <string name="parking_cost">Cost:</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="plate_id">Plate Id:</string>

</resources>