<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/parking_bkg"
    tools:context=".ui.parking.PaymentFragment">

    <!-- Back Button -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/back" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_details"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender" />

            <!-- Cardholder Name -->
            <EditText
                android:id="@+id/cardholder_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/cardholder_name"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black" />

            <!-- Card Number -->
            <EditText
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/card_number"
                android:drawableStart="@drawable/baseline_credit_card_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="number" />

            <!-- Expiry Date -->
            <EditText
                android:id="@+id/expiry_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/expiry_date"
                android:drawableStart="@drawable/baseline_date_range_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="text" />

            <!-- CVV -->
            <EditText
                android:id="@+id/cvv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/cvv"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="numberPassword"
                android:maxLength="3" />

            <!-- Pay Button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/pay_now"
                android:id="@+id/pay_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
